[package]
name = "jmri-throttle-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
warp = "0.3.6"
