[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jmri-throttle-rs = { path = ".." }
eframe = { version = "0.24.1", features = ["persistence"] }
serde_json = "1.0.108"
wasm-bindgen-futures = "0.4.39"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
ewebsock = "0.4.0"
uuid = { version = "1.6.1", features = ["v4", "serde", "js"] }
chrono = "0.4.31"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
